# datacachalog

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPROVEMENTS.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl
.claude/: test-architecture.yaml
.history/: ROADMAP_20251213143717.md  ROADMAP_20251214000031.md  ROADMAP_20251223133549.md
examples/: basic_usage.py  error_handling.py  local_development.py  parallel_fetch.py  project_root_discovery.py  push_workflow.py
init/.datacachalog/catalogs/: default.py
src/datacachalog/: __init__.py  config.py  discovery.py
src/datacachalog/adapters/: __init__.py
src/datacachalog/adapters/cache/: __init__.py  file_cache.py
src/datacachalog/adapters/executor/: __init__.py  executor.py
src/datacachalog/adapters/readers/: __init__.py  geopandas.py  pandas.py  polars.py
src/datacachalog/adapters/storage/: __init__.py  filesystem.py  router.py  s3.py
src/datacachalog/cli/: __init__.py  formatting.py  main.py
src/datacachalog/cli/commands/: list.py  status.py
src/datacachalog/core/: __init__.py  cache_maintenance.py  exceptions.py  fetch_operations.py  formatting.py  glob_utils.py  models.py  path_utils.py  ports.py  services.py
src/datacachalog/progress/: __init__.py  rich_progress.py
tests/: conftest.py
tests/integration/: conftest.py  test_catalog_router.py  test_catalog_s3.py  test_cli_cache_stats.py  test_cli_list_status.py  test_cli_status_table.py
tests/unit/: test_catalog.py  test_catalog_cache.py  test_catalog_fetch_advanced.py  test_catalog_fetch_glob.py  test_catalog_load.py  test_catalog_push.py  test_catalog_versioning.py  test_cli.py  test_cli_catalog_root.py  test_cli_clean.py  test_cli_fetch.py  test_cli_helpers.py  test_cli_list.py  test_cli_status.py  test_cli_versioning.py  test_config.py  test_discovery.py  test_examples.py  test_exceptions.py  test_file_cache.py  test_filesystem_storage.py  test_formatting.py  test_geoparquet_reader.py  test_glob_utils.py  test_models.py  test_pandas_readers.py  test_polars_readers.py  test_ports.py  test_readers_package.py  test_rich_progress.py  test_router_storage.py  test_s3_storage.py
tracking/: issues.yaml
