[project]
name = "datacachalog"
version = "0.7.0"
description = "A data catalog with file-based caching for remote storage"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["data", "catalog", "cache", "s3", "storage"]

dependencies = [
    "boto3>=1.34.0",
    "rich>=13.0.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
    "pre-commit>=3.6.0",
    "moto[s3]>=5.0.0",
    "boto3-stubs[s3]>=1.34.0",
    "pytest-xdist>=3.8.0",
    "pytest-random-order>=1.2.0",
    "pytest-timeout>=2.4.0",
    "pytest-mypy>=1.0.1",
    "hypothesis>=6.148.8",
]

[project.scripts]
catalog = "datacachalog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datacachalog"]

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Register custom markers for CI job separation
markers = [
    "core: Core models, ports, and services (no I/O)",
    "storage: Storage adapters (s3, filesystem)",
    "cache: File cache adapter",
    "progress: Rich progress integration",
    "cli: CLI tests",
    "e2e: End-to-end tests",
    "tra: Test Responsibility Anchor (TRA) - namespace.Anchor format",
    "tier: Test tier for CI job separation (0=instant, 1=fast, 2=standard, 3=slow, 4=manual)",
    "property: Property-based tests using hypothesis",
]

# Strict mode - fail on unknown markers and config errors
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

filterwarnings = [
    "error",
    "ignore::DeprecationWarning:botocore.*",
]

# ============================================================================
# Mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

# Import discovery for src layout
mypy_path = "src"
packages = ["datacachalog"]

# Caching
cache_dir = ".mypy_cache"

# Per-module overrides
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["var-annotated"]

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "moto.*",
]
ignore_missing_imports = true

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
# Target Python 3.11+
target-version = "py311"

# Same as Black
line-length = 88
indent-width = 4

# Exclude common directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

# Source directories for import sorting
src = ["src", "tests"]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["datacachalog"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # Unused arguments OK in tests (fixtures)
]
"tests/conftest.py" = [
    "TC001",  # Runtime imports needed for fixtures
    "TC003",  # Runtime imports needed for fixtures
]
"src/datacachalog/core/models.py" = [
    "TC003",  # Path needed at runtime for is_absolute() and path joining
]
"src/datacachalog/discovery.py" = [
    "TC003",  # Path needed at runtime for glob, stem, etc.
]
"src/datacachalog/cli/*.py" = [
    "B008",   # typer.Option/Argument are designed for function defaults
]

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
